--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import "component/divider";
 @import "component/list-choice";
 @import "component/loader";
+@import "component/loader-blobs";
 @import "component/toolbar-page";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-dropdown";
