--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -13,6 +13,14 @@
   .table-spaced {
     &__items--body--state, &__items--header--state {
       justify-content: center;
+
+      .loader-blobs {
+        .blob,
+        .blob-center {
+          height: 10px;
+          width: 10px;
+        }
+      }
     }
     &__items--header--actions {
       min-width: 209px;
