mise en place ellipsis arbo ged

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -249,6 +249,15 @@
           top: 4px;
           left: -11px;
         }
+
+        &__name {
+          display: inline-block;
+          vertical-align: middle;
+          width: 90%;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
       }
 
       &:hover {
