--- a/src/assets/scss/component/base-components/_base-model-preview.scss
+++ b/src/assets/scss/component/base-components/_base-model-preview.scss
@@ -7,6 +7,7 @@
     display: block;
     overflow: hidden;
     position: relative;
+    margin: 0 auto;
   }
   .model-image-holder {
     position: absolute;
