--- a/src/assets/scss/component/base-components/_base-button-option.scss
+++ b/src/assets/scss/component/base-components/_base-button-option.scss
@@ -68,10 +68,10 @@ $base-button-option: 'base-button-option';
       .delete__actions {
         position: absolute;
         right: 0;
-        bottom: 0;
-        height: 100%;
-        width: 76px;
-        background: #fff;
+        bottom: 50%;
+        height: 41px;
+        width: 85px;
+        background: $white;
         display: -ms-flexbox;
         display: flex;
         -ms-flex-align: center;
@@ -79,12 +79,29 @@ $base-button-option: 'base-button-option';
         -ms-flex-pack: distribute;
         justify-content: space-around;
         box-shadow: 0 2px 10px 0 rgba(0,0,0,.07);
+        transform: translateY(50%);
+        
+        .check,
+        .check-cross {
+          height: 28px;
+          width: 28px;
+          border-radius: 100%;
+          transition: all ease 0.25s;
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-        .svg-icon {
-          &.check {
+          &:hover {  
+            background: #F6F6F6;
+          }
+        }
+        .check {
+          .svg-icon {
             fill: #28a745;
           }
-          &.check-cross {
+        }
+        .check-cross {
+          .svg-icon {
             fill: #dc3545;
           }
         }
