--- a/src/assets/scss/component/base-components/_base-button-option.scss
+++ b/src/assets/scss/component/base-components/_base-button-option.scss
@@ -3,9 +3,7 @@ $base-button-option: 'base-button-option';
 .#{base-button-option} {
   &__tool {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: auto;
     width: 27px;
     &:hover {
       cursor: pointer;
