--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -275,12 +275,13 @@
     width: 100%;
     font-size: 1rem;
     text-align: center;
-    position: relative;
+    position: relative;S
     &:after {
       transition: .15s ease all;
       display: inline-block;
       content: '';
-      width: 50px;
+      width: 100%;
+      max-width: 50px;
       height: 1px;
       background-color: #95989A;
       position: absolute;
@@ -304,6 +305,20 @@
       width: 100% !important;
       border: none !important;
       outline: none !important;
+    }
+  }
+}
+
+.project-preview {
+  &-icon {
+    padding-top: 100%;
+    position: relative;
+    .svg-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -15px;
+      margin-top: -15px;
     }
   }
 }
