--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -275,7 +275,7 @@
     width: 100%;
     font-size: 1rem;
     text-align: center;
-    position: relative;S
+    position: relative;
     &:after {
       transition: .15s ease all;
       display: inline-block;
