ajout cursor pointer sur les dossiers tabeau ged

--- a/src/assets/scss/component/base-components/_base-bd-table.scss
+++ b/src/assets/scss/component/base-components/_base-bd-table.scss
@@ -28,6 +28,7 @@ $base-cd-table: 'bd-table';
 
       svg {
         color: $primary;
+        cursor: pointer;
         transition: .15s linear all;
       }
       background-color: white;
