ajout cursor pointer sur le titre des dossiers dans le tableau de la GED

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -165,6 +165,10 @@
     .table-name {
       width: 47%;
       min-width: 47%;
+
+      &__name {
+        cursor: pointer;
+      }
     }
     .table-type {
       width: 10%;
