--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -221,7 +221,7 @@
     background-color: $white;
     box-shadow: $bd-box-shadow;
     font-size: 0.7143rem;
-    height: 100%;
+    min-height: 100%;
   }
 
   .dms__tree-view-header {
@@ -259,9 +259,16 @@
         }
       }
 
+      .collapse-tree {
+        transition: all 0.3s ease-in-out;
+        will-change: height;
+        overflow: hidden;
+      }
+
       .dms__line-tree-view-content {
         position: relative;
         .folder-carret {
+          transition: transform 0.3s ease-in-out;
           position: absolute;
           display: inline-block;
           content: '';
@@ -301,9 +308,10 @@
 
     li.is-current-path > .dms__line-tree-view > .dms__line-tree-view-content {
       transition: .3s ease all;
-      .folder-carret {
-        transform: rotate(90deg);
-      }
+    }
+
+    .is-folder-opened > .dms__line-tree-view > .dms__line-tree-view-content .folder-carret {
+      transform: rotate(90deg);
     }
   }
 }
