--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -58,7 +58,6 @@
     }
 
     &__map-info-content {
-      padding: $grid-gutter-width;
       width: 100%;
       margin-bottom: 21px;
       box-shadow: 0 2px 10px 0 rgba(0,0,0,0.07);
@@ -73,6 +72,17 @@
     &__info-project {
       width: 100%;
       margin-right: 0;
+      height: 338px;
+    }
+    &__navigation-project {
+      display: flex;
+      align-items: center;
+      height: 61px;
+      padding: 16px 11px;
+
+      &__title {
+        width: 75%;
+      }
     }
 
     &__map {
