inte carte project + issue/159

--- a/src/assets/scss/component/base-components/_base-card.scss
+++ b/src/assets/scss/component/base-components/_base-card.scss
@@ -35,4 +35,10 @@ $toolbox-background: #E6E6E6;
   padding: 15px;
 }
 
+.#{$base-card-name}__link {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 
