--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -31,12 +31,34 @@
     }
   }
 
+  .card-project {
+    overflow: hidden;
+    padding: 0;
+
+    .card-bd__title {
+      padding: 0;
+
+
+      &:after {
+        display: none;
+      }
+    }
+    .card-bd__body {
+      height: 61px;
+      padding: 22px 27px;
+    }
+  }
+
   .content-project {
     width: 100%;
 
     @include media-breakpoint-up(lg) {
       width: calc(100%/3 * 2 - 30px);
       margin-right: 30px;
+    }
+
+    .model-image-wrapper {
+      height: 338px !important; // Override component style
     }
   }
   .user-project {
