inte page redirection

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -35,5 +35,6 @@
 @import "component/dms/dms";
 
 @import "pages/project";
+@import "pages/signin-required";
 @import "pages/viewer";
 @import "transitions";
