inte tooltip + mise en plase sur les cartes projet et sur le titre de la preview dans la page projet

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -63,3 +63,8 @@ $breadcrumb-active-color: $bim-cyan;
 $breadcrumb-divider: quote(">");
 
 $breadcrumb-border-radius: $border-radius;
+
+// Tooltips
+$tooltip-font-size: 0.75rem;
+$tooltip-bg: $primary;
+$tooltip-border-radius: 7px;
