background block arbo ged ok

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -226,6 +226,7 @@
     box-shadow: $bd-box-shadow;
     font-size: 0.7143rem;
     height: 100%;
+    overflow: auto;
   }
 
   .dms__tree-view-header {
