repositionnement click menu option

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -57,7 +57,7 @@ $breadcrumb-padding-x: 1rem;
 $breadcrumb-item-padding: .5rem;
 $breadcrumb-margin-bottom: 1rem;
 
-$breadcrumb-bg: white;
+$breadcrumb-bg: $white;
 $breadcrumb-divider-color: $bim-cyan;
 $breadcrumb-active-color: $bim-cyan;
 $breadcrumb-divider: quote(">");
