inte searchbar page projets

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,6 +25,7 @@
 @import "component/base-components/base-model-preview";
 @import "component/base-components/base-input-text-material";
 @import "component/base-components/base-scrollbar";
+@import "component/base-components/base-search-bar";
 @import "component/base-components/base-bd-table";
 @import "component/base-components/base-button-tool";
 @import "component/base-components/base-tree-select";
