--- a/src/assets/scss/component/base-components/_base-search-bar.scss
+++ b/src/assets/scss/component/base-components/_base-search-bar.scss
@@ -1,7 +1,11 @@
 $search-border-color: $body-bg;
 $search-btn-size: 41px;
-$search-size-container: 290px;
+$search-size-container: 216px;
+$search-md-size-container: 290px;
+$search-lg-size-container: 290px;
 $search-size-input: $search-size-container - $search-btn-size;
+$search-md-size-input: $search-md-size-container - $search-btn-size;
+$search-lg-size-input: $search-lg-size-container - $search-btn-size;
 
 .search-component {
   position: relative;
@@ -9,12 +13,26 @@ $search-size-input: $search-size-container - $search-btn-size;
   max-width: $search-size-container;
   display: flex;
 
+  @include media-breakpoint-up(md) { 
+    max-width: $search-md-size-container;
+  }
+  @include media-breakpoint-up(lg) {
+    max-width: $search-lg-size-container;
+  }
+
   .search-input {
     width: $search-size-input;
     padding: 9px 14px;
     min-width: auto;
     border: none;
     transition: all linear 0.35s;
+
+    @include media-breakpoint-up(md) { 
+      width: $search-md-size-input;
+    }
+    @include media-breakpoint-up(lg) {
+      width: $search-lg-size-input;
+    }
 
 
     &.is-close {
