All routes finally independent :)

--- a/src/assets/scss/component/_toolbar-page.scss
+++ b/src/assets/scss/component/_toolbar-page.scss
@@ -8,13 +8,13 @@
   .top-toolbar {
     &__choice-list-items {
       padding-right: $grid-gutter-width;
-      margin: 0 auto;
     }
   }
 }
 
 .project-list,
-.cloud-list {
+.cloud-list,
+.page-clouds {
   .top-toolbar {
     &__choice-list-items {
       width: 216px;
