WIP loader page bleu redirection

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,6 +15,7 @@
 @import "component/list-choice";
 @import "component/loader";
 @import "component/loader-blobs";
+@import "component/loader-redirect";
 @import "component/toolbar-page";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-dropdown";
