debut inte liste utilisateurs

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,6 +17,7 @@
 @import "component/loader-blobs";
 @import "component/loader-redirect";
 @import "component/toolbar-page";
+@import "component/users-list";
 @import "component/base-components/base-choice-list";
 @import "component/base-components/base-dropdown";
 @import "component/base-components/base-button-action";
