--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -5,6 +5,8 @@ $primary: #2F374A;
 $bim-cyan: #00B5A6;
 $black: #000000;
 $white: #ffffff;
+$bim-positive: #00AF50;
+$bim-negative: #FF0000;
 $grid-gutter-width: 15px;
 $font-size-base: 0.875rem;
 
@@ -68,3 +70,10 @@ $breadcrumb-border-radius: $border-radius;
 $tooltip-font-size: 0.857rem;
 $tooltip-bg: $primary;
 $tooltip-border-radius: 7px;
+
+// Badge
+$badge-padding-y: 4px;
+$badge-padding-x: 0.7em;
+$badge-font-size: 0.643rem;
+$badge-font-weight: normal;
+$badge-border-radius: 3px;
