--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -8,39 +8,121 @@
   }
   &__header {
     box-shadow: $bd-box-shadow;
-    padding: 10px 9px 10px 12px;
+    padding: 5px 3px 5px 9px;
     display: flex;
+    align-items: center;
+
+    .svg-icon {
+      cursor: pointer;
+    }
 
     &__left-container {
 
     }
     &__right-container {
       margin-left: auto;
+      width: 24%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
   &__body {
     overflow-y: auto;
   }
   &__users {
-
+    padding: 0;
+    margin: 0;
   }
   &__user {
     display: flex;
     align-items: center;
     padding: 16px 9px 11px 12px;
+    border-bottom: 1px solid rgba(148,151,154,0.08);
     
-
     &__picture {
-      height: 38px;
-      width: 38px;
-      border-radius: 100%;
-      background: grey;
+      position: relative;
+      overflow: hidden;
+
+      .circle {
+        height: 38px;
+        width: 38px;
+        border-radius: 100%;
+      }
     }
     &__datas {
+      color: $body-color;
+      margin-left: 24px;
+      font-size: 0.643rem;
+      line-height: 0.9rem;
 
+      .badge {
+        margin-left: 19px;
+      }
+
+      & > * {
+        display: inline-block;
+        vertical-align: top;
+      }
+
+      p {
+        margin-bottom: 0;
+
+        & > * {
+          display: block;
+        }
+      }
+    }
+    &__name {
+      color: $primary;
+      font-size: 0.714rem;
     }
     &__actions {
       margin-left: auto;
+
+      &__menu {
+        .base-button-option__menu {
+          width: 184px;
+          font-size: 0.714rem;
+
+          li {
+          
+          }
+          .svg-icon {
+            margin-left: 10px;
+          }
+        }
+
+        .arrow-left {
+          &:before {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 4px 4px 4px 0;
+            border-color: transparent $primary transparent transparent;
+            margin-right: auto;
+          }
+        }
+      }
+    }
+
+    &__status {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      height: 10px;
+      width: 10px;
+      box-sizing: border-box;
+      border: 1px solid $white;
+      border-radius: 100%;
+
+      &--inline {
+        background: $bim-positive;
+      }
+      &--outline {
+        background: $bim-negative;
+      }
     }
   }
 }
