--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -133,6 +133,44 @@
         left: 0;
         width: 100%;
         height: 100%;
+
+        &__container {
+          border: 2px dashed $primary;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          &__step {
+            text-align: center;
+
+            .svg-icon {
+              color: $primary;
+            }
+
+            &--first {
+              p {
+                color: $primary;
+                margin-top: 30px;
+                margin-bottom: 34px;
+                font-size: 0.929rem;
+              }
+            }
+            &--second {
+              & > div  {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+              }
+
+              .base-input-text-material {
+                margin-top: 25px;
+                margin-bottom: 25px;
+              }
+            }
+          }
+        }
       }
       #base-map {
         position: absolute;
