WIP ajout card creation cloud

--- a/src/assets/scss/component/_toolbar-page.scss
+++ b/src/assets/scss/component/_toolbar-page.scss
@@ -12,6 +12,9 @@
   }
 
   .search-container {
+    display: flex;
+    align-items: center;
+
     @include media-breakpoint-up(sm) { 
       width: calc(100%/2);
     }
