inte animation carte creation cloud + focus

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -36,6 +36,7 @@
 @import "component/dms/dms_breadcrumb";
 @import "component/dms/dms";
 
+@import "pages/page-clouds";
 @import "pages/project";
 @import "pages/signin-required";
 @import "pages/viewer";
