debug hover icon check carte projet

--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -43,7 +43,7 @@
       }
     }
     .card-bd__header {
-      .svg-icon {
+      .icon-eye {
         cursor: pointer;
         transition: all ease 0.5s;
 
