fermeeture carte creation cloud + inte animation btn creation cloud

--- a/src/assets/scss/component/_toolbar-page.scss
+++ b/src/assets/scss/component/_toolbar-page.scss
@@ -9,6 +9,14 @@
     &__choice-list-items {
       padding-right: $grid-gutter-width;
     }
+
+    &__button-new-file svg {
+      transition: .2s ease-in-out all;
+    }
+  
+    &__button-new-file.active svg {
+      transform: rotate(135deg);
+    }
   }
 
   .search-container {
