modification couleur de fond de lappli

--- a/src/assets/scss/_bootstrap-variable-override.scss
+++ b/src/assets/scss/_bootstrap-variable-override.scss
@@ -1,5 +1,5 @@
 $font-family-base: 'Roboto';
-$body-bg: #F7F7F8;
+$body-bg: #e8e8e8;
 $body-color: #94979A;
 $primary: #2F374A;
 $bim-cyan: #00B5A6;
