modif couleur de fond preview

--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -68,7 +68,7 @@
 
     .model-preview-slider {
       height: 338px;
-      background: #E6E6E6;
+      background: #CCCCCC;
     }
   }
   .user-project {
