couleur fond preview = variable

--- a/src/assets/scss/pages/_project.scss
+++ b/src/assets/scss/pages/_project.scss
@@ -68,7 +68,7 @@
 
     .model-preview-slider {
       height: 338px;
-      background: #CCCCCC;
+      background: $bg-preview;
     }
   }
   .user-project {
